# vitals

./: .gitignore  AI.md  OPENCODE.md  README.md  astro.config.mjs  package-lock.json  package.json  tsconfig.json  vercel.json
.claude/skills/: deploy.md
.husky/: pre-commit
.opencode/commands/: add-metric.txt  ingest.txt
.opencode/skills/: add-metric.md  ingest.md
docs/: export.md
scripts/: generate-json.js  ingest.js  parse-health-xml.js
scripts/lib/: aggregate.js
scripts/parse-health-xml/: Cargo.toml
scripts/parse-health-xml/src/: date.rs  ingest.rs  lib.rs  main.rs  parser.rs  schema.rs
scripts/parse-health-xml/tests/: cli.rs  date.rs  ingest.rs  parser.rs  schema.rs
src/components/: HealthBarChart.tsx  HealthChart.tsx  HealthHeatmap.tsx  HealthKpiTile.tsx  HealthRangeBand.tsx  HealthScatter.tsx  HealthThresholdLine.tsx  SummaryStats.tsx  TimeRangeSelector.tsx  WorkoutsList.tsx
src/components/_chart/: Empty.tsx  Header.tsx  Tooltip.tsx
src/hooks/: useMetric.ts  useTimeRange.ts
src/layouts/: Layout.astro
src/lib/: regression.ts  timeRange.ts
src/pages/: index.astro
src/styles/: global.css
src/types/: health.ts
tests/: aggregate.test.js  timeRange.test.ts
